# optimus

./: .cursorignore  .gitignore  README.md  consume_offset.json  consumer.py  coze-api.py  hentai_crawl.py  hentai_users.py  offset.json  pipeline.py  pipeline_v2.py  produce_offset.json  producer.py  pyproject.toml  requirements.txt  test.py
FunClip-main/funclip/: videoclipper.py
GPT_SoVITS_main/: .gitignore  book_to_chunk.py  chunk_to_speech.py  demo.ipynb  test.py
GPT_SoVITS_main/GPT_SoVITS/: inference_webui.py
controller/database/: db_operations.py
controller/domain/: pipeline_db.py  producer.py
core/tools/: ffmpeg_utils.py
crawlers/: __init__.py
crawlers/hentai/: __init__.py  hentai_crawl.py  hentai_users.py
data_crawl/: callers.py  data_proccessor.py  utils.py
data_crawl/hentai/: hentai_users.py
data_crawl/twitter/: auto_reply.py  play_twitter.py  (+4 more)
debug/: test_text.txt
distributors/: __init__.py
legacy_20250310/: pipeline_v2.py  producer.py
optimus_tools/: adhoc.ipynb  asure_cognition.py  book_to_chunk.py  callers.py  chunk_to_speech.py  coze_api.py  coze_utils.py  data_proccessor.py  data_utils.py  ffmpeg_utils.py  http_utils.py  image_utils.py  log_utils.py  microsoft_azure_api.py  playwright_utils.py  stable_diffusion_api.py  text2image_utils.py  text_utils.py
social-auto-upload-main/: README.MD  get_douyin_cookie.py  upload_video_to_douyin.py
social_auto_upload_main/: cookie_setup.py  get_douyin_cookie.py  upload_video_to_bilibili.py  upload_video_to_douyin.py  upload_video_to_tencent.py
tools/: ffmpeg_utils.py  http_utils.py
(+21 files in other folders)
