[tool.poetry]
name = "optimus"
version = "0.1.0"
description = "Your ML project"
authors = ["Your Name <your@email.com>"]
packages = [{ include = "optimus_tools" }, { include = "data_crawl" }]

[tool.poetry.dependencies]
python = ">=3.10"
playwright = "^1.52.0"
pyotp = "^2.9.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"